crates/doodle-core/tests/snapshots/diag_render__spanless_diagnostic_is_header_only.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_diagnostic(&d, &view(\"nowhere.doodle\", \"\"))"
---
error[unterminated-string]: a diagnostic with no source location
