crates/doodle-core/tests/snapshots/diag_render__spanless_note_renders_as_a_note_line.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_diagnostic(&d, &view(\"shadow.doodle\", source))"
---
warning[shadowing]: this `count` hides an outer `count`
  --> shadow.doodle:3:3
3 |   count = 2
  |   ^^^^^^^^^
  = note: shadowing is allowed, but it's often a mistake
