crates/doodle-core/tests/snapshots/diag_render__standalone_warning_with_note.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_diagnostic(&d, &view(\"shadow.doodle\", source))"
---
warning[shadowing]: this `count` hides an outer `count`
  --> shadow.doodle:3:3
3 |   count = 2
  |   ^^^^^^^^^
note: the outer `count` is declared here
  --> shadow.doodle:1:1
1 | count = 1
  | ---------
